# salt-api-cli

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  python-publish.yml
salt_api_cli/: __main__.py  cli.py  highlevel.py  lowlevel.py
salt_cli/: __main__.py  cli.py
