[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "salt-api-cli"
requires-python = ">=3.11"
authors = [{ name = "Pradish Bijukchhe", email = "pradish@sandbox.com.np" }]
description = "CLI to access salt-api"
readme = "README.md"
license = "MIT"
keywords = []
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
pre-commit = ["pre-commit"]

[project.scripts]
salt-api-cli = "salt_api_cli.cli:main"

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/saltapi-cli"
Issues = "https://github.com/sandbox-pokhara/saltapi-cli/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"salt_api_cli" = "salt_api_cli"

[tool.setuptools.dynamic]
version = { attr = "salt_api_cli.version.__version__" }

[tool.ruff.lint]
select = ["I"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["salt_api_cli"]
typeCheckingMode = "strict"
